# ENG5220-Group14

./: CameraWorker.cpp  Design sketch1.dwg  GarbageSorter.cpp  LICENSE  README.md  StepperMotor.cpp  Test.txt  box.dwg  main.cpp  main_sort.cpp  motor_controller.cpp  yolo_detector.h
3D sketch/: Box.SLDPRT  Main body.SLDASM  Shell.SLDPRT  Sorting lane.SLDPRT
CAD design sketch/: Design sketch1.dwg  Design sketch2.dwg  box.dwg  main body shell.dwg  main body sketch.dwg
Camera/: CameraCapture.cpp  CameraCapture.h  CameraTimer.cpp
ENG5220-Group14/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ENG5220-Group14/image/: Capture.txt
ENG5220-Group14/include/: CameraCapture.h  CameraTimer.h  CameraWorker.h  GarbageSorter.h  ImageCaptureThread.h  StepperMotor.h  ThreadController.h  Timer.h  event_dispatcher.hpp  motor_controller.hpp  shared_data.h  yolo_detector.h
ENG5220-Group14/src/: CameraCapture.cpp  CameraTestMain.cpp  CameraTimer.cpp  CameraWorker.cpp  GarbageSorter.cpp  ImageCaptureThread.cpp  StepperMotor.cpp  ThreadController.cpp  Timer.cpp  main.cpp  motor_controller.cpp  yolo_cam.cpp  yolo_detector.cpp
Motor/: Motor.cpp
dataset/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
include/: CameraCapture.h  CameraTimer.h  CameraWorker.h  GarbageSorter.h  StepperMotor.h  Timer.h  camera.hpp  classifier.hpp  motor_controller.hpp  ncnn_detector.hpp
src/: CameraMain.cpp  CameraTestMain.cpp  GarbageSorter.cpp  ImageCaptureThread.cpp  StepperMotor.cpp  ThreadController.cpp  Timer.cpp  main.cpp  motor_controller.cpp  yolo_detector.cpp
(+2 files in other folders)
